; ModuleID = '/home/carl/AnghaBench/redshift/src/extr_redshift.c_interpolate_transition_scheme.c'
source_filename = "/home/carl/AnghaBench/redshift/src/extr_redshift.c_interpolate_transition_scheme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, double, i32*)* @interpolate_transition_scheme to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @interpolate_transition_scheme(%struct.TYPE_3__* %0, double %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca double, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store double %1, double* %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  store i32* %10, i32** %7, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i32* %12, i32** %8, align 8
  %13 = load double, double* %5, align 8
  %14 = call double @CLAMP(double 0.000000e+00, double %13, double 1.000000e+00)
  store double %14, double* %5, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load double, double* %5, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @interpolate_color_settings(i32* %15, i32* %16, double %17, i32* %18)
  ret void
}

declare dso_local double @CLAMP(double, double, double) #1

declare dso_local i32 @interpolate_color_settings(i32*, i32*, double, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
